--- a/html/servico-educacao.html
+++ b/html/servico-educacao.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Apostilas</h1>
-    <p>Apostilas ENEM, Fuvest, ITA e Unicamp.</p>
+    
+    <div>
+      <a href="/index.html">< Voltar</a>  
+      <h1>Apostilas</h1>
+      <p>Apostilas ENEM, Fuvest, ITA e Unicamp.</p>
+    </div>
   </header>
 
   <main>
