--- a/html/servico-plataforma.html
+++ b/html/servico-plataforma.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <header>
-    <h1>Plataforma Digital</h1>
-    <p>Videoaulas, simulados e exercícios interativos.</p>
+    <div>
+      <a href="/index.html">< Voltar</a>  
+      <h1>Plataforma Digital</h1>
+      <p>Videoaulas, simulados e exercícios interativos.</p>
+    </div>
   </header>
 
   <main>
