--- a/html/dep-pedagogico.html
+++ b/html/dep-pedagogico.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <header>
-    <h1>Pedagógico - Erykson Pereira</h1>
+    <div>
+      <a href="/index.html">< Voltar</a>  
+      <h1>Pedagógico - Erykson Pereira</h1>
+    </div>
   </header>
 
   <main>
