atualizado pagina principal

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Facylita — Educação & Tecnologia</title>
   <meta name="description" content="Facylita — cursos preparatórios e apostilas personalizadas (Itapevi)" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -14,7 +14,6 @@
     <div class="link-container">
       <div class="brand">Facylita</div>
       <nav>
-        <a href="#about">Sobre</a>
         <a href="#cursos">Cursos</a>
         <a href="#investidores">Departamentos</a>
         <a href="#contato" class="cta">Contato</a>
@@ -31,7 +30,6 @@
         </p>
         <div class="sobre-links">
           <a href="#cursos" class="cta">Ver cursos</a>
-          <span class="endereco">Sede: Av. das Letras, 320 — Itapevi/SP</span>
         </div>
       </div>
 
@@ -44,10 +42,11 @@
       <div class="card-sobre">
         <h2>Sobre a Facylita</h2>
         <p>
-          A <strong>Facylita Educação e Tecnologia Ltda.</strong> foi criada para inovar
-          no setor educacional com foco em inclusão.
-          Oferecemos cursos preparatórios para ENEM e vestibulares, apostilas interativas
-          e serviços de licenciamento de materiais para instituições.
+          A <strong>Facylita Educação e Tecnologia Ltda</strong> É uma empresa alinhada à ODS 4 atua na venda de cursos preparatórios para vestibulares, com a missão de oferecer uma educação acessível, inclusiva e de excelência. Seu foco é ampliar o acesso ao conhecimento e promover a equidade educacional, unindo objetivos comerciais a um forte compromisso social: transformar vidas por meio da educação.
+          A organização compreende que a aprovação em vestibulares representa uma via essencial para o desenvolvimento pessoal e a mobilidade social, sobretudo para indivíduos de comunidades historicamente excluídas ou em situação de vulnerabilidade. Por isso, seu propósito vai além do lucro: busca ser um agente de transformação, democratizando o ensino preparatório com conteúdos atualizados, estruturados e ancorados em metodologias pedagógicas eficazes.
+          A empresa também reconhece que a educação contínua, ao longo de todas as etapas da vida, é fundamental para que as pessoas acompanhem as demandas de um mundo em constante evolução. Ao oferecer materiais de qualidade e suporte educacional adequado, contribui para o desenvolvimento das competências e habilidades necessárias ao sucesso acadêmico e profissional, reforçando o papel da educação como motor de desenvolvimento sustentável, inclusão social e exercício pleno da cidadania.
+          Dessa forma, posiciona-se como uma ponte entre o potencial individual de seus alunos e as oportunidades reais de transformação social, tornando o ensino preparatório uma ferramenta concreta para a redução das desigualdades e a promoção da justiça educacional.
+          
         </p>
       </div>
     </section>
@@ -55,21 +54,17 @@
     <section id="cursos" class="section">
       <h2>Produtos & Serviços</h2>
       <div class="cards-container">
-        <a href="html/servico-educacao.html" class="card-produtos">
+        <a href="servicos/html/servico-educacao.html" class="card-produtos">
           <h3>Apostilas</h3>
           <p>Apostilas ENEM, Fuvest, ITA, Unicamp.</p>
         </a>
-        <a href="html/servico-mentorias.html" class="card-produtos">
+        <a href="servicos/html/servico-mentorias.html" class="card-produtos">
           <h3>Mentorias</h3>
           <p>Mentoria individual e em grupo.</p>
         </a>
-        <a href="html/servico-plataforma.html" class="card-produtos">
+        <a href="servicos/html/servico-plataforma.html" class="card-produtos">
           <h3>Plataforma Digital</h3>
           <p>Videoaulas, simulados e exercícios interativos.</p>
-        </a>
-        <a href="html/servico-editorial.html" class="card-produtos">
-          <h3>Produção Editorial</h3>
-          <p>Editoração, impressão e materiais educacionais.</p>
         </a>
       </div>
     </section>
@@ -80,14 +75,14 @@
     <section id="investidores" class="section">
       <h2>Departamentos</h2>
       <div class="cards-container">
-        <a href="html/dep-social.html" class="card-departamento">Social - David Lucas</a>
-        <a href="html/dep-pedagogico.html" class="card-departamento">Pedagógico - Erykson Pereira</a>
-        <a href="html/dep-marketing.html" class="card-departamento">Marketing - Willian Hipólito</a>
-        <a href="html/dep-comercial.html" class="card-departamento">Comercial - Lucas Pereira</a>
-        <a href="html/dep-financeiro.html" class="card-departamento">Financeiro - Higor Barboza</a>
-        <a href="html/dep-administrativo.html" class="card-departamento">Administrativo - Kauê de Melo</a>
-        <a href="html/dep-tecinov-andrey.html" class="card-departamento">Tecnologia e Inovação - Andrey</a>
-        <a href="html/dep-tecinov-julio.html" class="card-departamento">Tecnologia e Inovação - Julio</a>
+        <a href="departamentos/html/dep-social.html" class="card-departamento">Social - David Lucas</a>
+        <a href="departamentos/html/dep-pedagogico.html" class="card-departamento">Pedagógico - Erykson Pereira</a>
+        <a href="departamentos/html/dep-marketing.html" class="card-departamento">Marketing - Willian Hipólito</a>
+        <a href="departamentos/html/dep-comercial.html" class="card-departamento">Comercial - Lucas Pereira</a>
+        <a href="departamentos/html/dep-financeiro.html" class="card-departamento">Financeiro - Higor Barboza</a>
+        <a href="departamentos/html/dep-administrativo.html" class="card-departamento">Administrativo - Kauê de Melo</a>
+        <a href="departamentos/html/dep-tecinov-andrey.html" class="card-departamento">Tecnologia e Inovação - Andrey</a>
+        <a href="departamentos/html/dep-tecinov-julio.html" class="card-departamento">Tecnologia e Inovação - Julio</a>
       </div>
     </section>
 
@@ -96,10 +91,5 @@
   <footer>
     <div class="tcc"><small>Facylita — TCC</small></div>
   </footer>
-
-  <script>
-    lucide.createIcons();
-  </script>
-  <script src="js/script.js"></script>
 </body>
 </html>
